--- a/index.html
+++ b/index.html
@@ -9,5 +9,33 @@
 </head>
 <body>
   
+  <div class="container">
+    <img src="/Assents/balao.svg" alt="icone balão" class="bubble">
+
+    <div class="livechat">
+      <div class="header">
+        <img src="/Assents/Logo.png" alt="logo Take Blip">
+        <h4>Take Blip</h4>
+        <p>online</p>
+      </div>
+
+      <div class="content">
+        <div class="chat">
+          <div class="mensagem-bot">
+            <p class="mensagem">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
+            </p>
+          </div>
+        </div>
+        <div class="send-container">
+          <input type="text" placeholder="Digite sua mensagem aqui">
+          <input type="submit" value="Send">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
 </body>
 </html>
