--- a/index.html
+++ b/index.html
@@ -10,17 +10,33 @@
 <body>
   
   <div class="container">
-    <img src="/Assents/balao.svg" alt="icone balão" class="bubble">
+    <div class="container-bubble">
+      <img src="/Assents/balao.svg" alt="icone balão" class="bubble">
+    </div>
 
     <div class="livechat">
       <div class="header">
-        <img src="/Assents/Logo.png" alt="logo Take Blip">
-        <h4>Take Blip</h4>
-        <p>online</p>
+        <div class="container-header-img">
+          <img src="/Assents/Logo.png" alt="logo Take Blip">
+        </div>
+        <div class="txt-container">
+          <h4>Take Blip</h4>
+          <p>online</p>
+        </div>
       </div>
 
       <div class="content">
         <div class="chat">
+          <div class="mensagem-bot">
+            <p class="mensagem">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
+            </p>
+          </div>
+          <div class="mensagem-bot">
+            <p class="mensagem">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
+            </p>
+          </div>
           <div class="mensagem-bot">
             <p class="mensagem">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
