--- a/index.html
+++ b/index.html
@@ -1,57 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Live Chat</title>
-</head>
-<body>
-  
-  <div class="container">
-    <div class="container-bubble">
-      <img src="/Assents/balao.svg" alt="icone balão" class="bubble">
-    </div>
-
-    <div class="livechat">
-      <div class="header">
-        <div class="container-header-img">
-          <img src="/Assents/Logo.png" alt="logo Take Blip">
-        </div>
-        <div class="txt-container">
-          <h4>Take Blip</h4>
-          <p>online</p>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Live Chat</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="container-bubble">
+        <img src="/Assents/balao.svg" alt="icone balão" class="bubble" />
       </div>
 
-      <div class="content">
-        <div class="chat">
-          <div class="mensagem-bot">
-            <p class="mensagem">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
-            </p>
+      <div class="livechat">
+        <div class="header">
+          <div class="container-header-img">
+            <img src="/Assents/Logo.png" alt="logo Take Blip" />
           </div>
-          <div class="mensagem-bot">
-            <p class="mensagem">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
-            </p>
-          </div>
-          <div class="mensagem-bot">
-            <p class="mensagem">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur dignissimos facilis eligendi? Repudiandae nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio tenetur dignissimos omnis quibusdam, aut non?
-            </p>
+          <div class="txt-container">
+            <h4>Take Blip</h4>
+            <p>online</p>
           </div>
         </div>
-        <div class="send-container">
-          <input type="text" placeholder="Digite sua mensagem aqui">
-          <input type="submit" value="Send">
+
+        <div class="content">
+          <div class="chat">
+            <div class="mensagem-bot">
+              <p class="mensagem">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Similique pariatur dignissimos facilis eligendi? Repudiandae
+                nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
+                tenetur dignissimos omnis quibusdam, aut non?
+              </p>
+            </div>
+            <div class="mensagem-bot">
+              <p class="mensagem">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Similique pariatur dignissimos facilis eligendi? Repudiandae
+                nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
+                tenetur dignissimos omnis quibusdam, aut non?
+              </p>
+            </div>
+            <div class="mensagem-bot">
+              <p class="mensagem">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Similique pariatur dignissimos facilis eligendi? Repudiandae
+                nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
+                tenetur dignissimos omnis quibusdam, aut non?
+              </p>
+            </div>
+          </div>
+          <div class="send-container">
+            <input type="text" placeholder="Digite sua mensagem aqui" />
+            <input type="submit" value="Send" />
+          </div>
         </div>
       </div>
-
     </div>
-  </div>
 
-<script src="/js/main.js"></script>
-</body>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
