Estilizando: txt, placeholder e scrollbar

--- a/index.html
+++ b/index.html
@@ -27,30 +27,27 @@
         <div class="content">
           <div class="chat">
             <div class="mensagem-bot">
-              <p class="mensagem">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Similique pariatur dignissimos facilis eligendi? Repudiandae
-                nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
-                tenetur dignissimos omnis quibusdam, aut non?
-              </p>
+              <div class="mensagem">
+                <p>Oi, tudo bem? 😊</p>
+                <p>Eu sou o <b>Contato Inteligente Take Blip</b>. Adoro conversar!</p>
+              </div>
             </div>
             <div class="mensagem-bot">
-              <p class="mensagem">
+              <div class="mensagem">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Similique pariatur dignissimos facilis eligendi? Repudiandae
                 nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
                 tenetur dignissimos omnis quibusdam, aut non?
-              </p>
+              </div>
             </div>
             <div class="mensagem-bot">
-              <p class="mensagem">
+              <div class="mensagem">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Similique pariatur dignissimos facilis eligendi? Repudiandae
                 nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
                 tenetur dignissimos omnis quibusdam, aut non?
-              </p>
-            </div>
-            
+              </div>
+            </div>               
           </div>
           <div class="send-container">
             <input type="text" placeholder="Digite sua mensagem aqui" />
