Adicionando mensagem e alinhando texto

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
         <div class="content">
           <div class="chat">
+            <div class="mensagem-person">
+              <div class="mensagem-p">
+                <p>Oi</p>                
+              </div>
+            </div>
+            <div class="hora-person">
+              <p>19:08</p>
+            </div>
             <div class="mensagem-bot">
               <div class="mensagem">
                 <p>Oi, tudo bem? 😊</p>
@@ -47,6 +55,9 @@
                 nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
                 tenetur dignissimos omnis quibusdam, aut non?
               </div>
+            </div>
+            <div class="hora-bot">
+              <p>19:09</p>
             </div>               
           </div>
           <div class="send-container">
