--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <div class="container-bubble">
+        <p class="x-close chat-fechado">X</p>
         <img src="/Assents/balao.svg" alt="icone balão" class="bubble" />
       </div>
 
@@ -28,7 +29,7 @@
           <div class="chat">
             <div class="mensagem-person">
               <div class="mensagem-p">
-                <p>Oi</p>                
+                <p>Oi</p>
               </div>
             </div>
             <div class="hora-person">
@@ -37,7 +38,10 @@
             <div class="mensagem-bot">
               <div class="mensagem">
                 <p>Oi, tudo bem? 😊</p>
-                <p>Eu sou o <b>Contato Inteligente Take Blip</b>. Adoro conversar!</p>
+                <p>
+                  Eu sou o <b>Contato Inteligente Take Blip</b>. Adoro
+                  conversar!
+                </p>
               </div>
             </div>
             <div class="mensagem-bot">
@@ -58,7 +62,7 @@
             </div>
             <div class="hora-bot">
               <p>19:09</p>
-            </div>               
+            </div>
           </div>
           <div class="send-container">
             <input type="text" placeholder="Digite sua mensagem aqui" />
