Estilizando mensagens bots e repoisicionando chat

--- a/index.html
+++ b/index.html
@@ -46,18 +46,21 @@
             </div>
             <div class="mensagem-bot">
               <div class="mensagem">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Similique pariatur dignissimos facilis eligendi? Repudiandae
-                nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
-                tenetur dignissimos omnis quibusdam, aut non?
-              </div>
-            </div>
-            <div class="mensagem-bot">
-              <div class="mensagem">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Similique pariatur dignissimos facilis eligendi? Repudiandae
-                nulla eum nostrum labore vero blanditiis ipsam. Ipsa eos optio
-                tenetur dignissimos omnis quibusdam, aut non?
+                <p class="m-espaçamento">E então, sobre o que vamos conversar?</p>
+                <div class="mensagem-list">
+                  <hr />
+                  <p><a href="#">WhatsApp e outros canais</a></p>
+                  <hr />
+                  <p><a href="#">Sobre Take Blip</a></p>
+                  <hr />
+                  <p><a href="#">Produtos e Serviços</a></p>
+                  <hr />
+                  <p><a href="#">Contratar Take Blip</a></p>
+                  <hr />
+                  <p><a href="#">Dúvidas e Suporte</a></p>
+                  <hr />
+                  <p class="m-espaçamento"><a href="#">Tudo em um Blip</a></p>
+                </div>                
               </div>
             </div>
             <div class="hora-bot">
