--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
           </div>
           <div class="send-container">
             <input type="text" placeholder="Digite sua mensagem aqui" />
-            <input type="submit" value="Send" />
+            <div class="clip-container">
+              <a href="#">
+                <img src="/Assents/baixados.svg" alt="clip" srcset="">
+              </a>
+            </div>
           </div>
         </div>
       </div>
