--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
             </div>
           </div>
           <div class="send-container">
-            <input type="text" placeholder="Digite sua mensagem aqui" />
-            <div class="clip-container">
+            <input type="text" placeholder="Digite sua mensagem aqui" class="texting"/>
+            <div class="enviar-container enviar-hide">
+              <a href="">
+                <img src="/Assents/Enviar.svg" alt="send" srcset="">
+              </a> 
+            </div>
+            <div class="clip-container" id="clip-container">
               <a href="#">
                 <img src="/Assents/baixados.svg" alt="clip" srcset="">
               </a>
