formatação do código

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             </div>
             <div class="mensagem-bot">
               <div class="mensagem">
-                <p class="m-espaçamento">E então, sobre o que vamos conversar?</p>
+                <p class="m-espaçamento">
+                  E então, sobre o que vamos conversar?
+                </p>
                 <div class="mensagem-list">
                   <hr />
                   <p><a href="#">WhatsApp e outros canais</a></p>
@@ -60,7 +62,7 @@
                   <p><a href="#">Dúvidas e Suporte</a></p>
                   <hr />
                   <p class="m-espaçamento"><a href="#">Tudo em um Blip</a></p>
-                </div>                
+                </div>
               </div>
             </div>
             <div class="hora-bot">
@@ -68,15 +70,19 @@
             </div>
           </div>
           <div class="send-container">
-            <input type="text" placeholder="Digite sua mensagem aqui" class="texting"/>
+            <input
+              type="text"
+              placeholder="Digite sua mensagem aqui"
+              class="texting"
+            />
             <div class="enviar-container enviar-hide">
               <a href="">
-                <img src="/Assents/Enviar.svg" alt="send" srcset="">
-              </a> 
+                <img src="/Assents/Enviar.svg" alt="send" srcset="" />
+              </a>
             </div>
             <div class="clip-container" id="clip-container">
               <a href="#">
-                <img src="/Assents/baixados.svg" alt="clip" srcset="">
+                <img src="/Assents/baixados.svg" alt="clip" srcset="" />
               </a>
             </div>
           </div>
