Adicionando img take chat

--- a/index.html
+++ b/index.html
@@ -27,48 +27,57 @@
 
         <div class="content">
           <div class="chat">
-            <div class="mensagem-person">
-              <div class="mensagem-p">
-                <p>Oi</p>
-              </div>
-            </div>
-            <div class="hora-person">
-              <p>19:08</p>
-            </div>
-            <div class="mensagem-bot">
-              <div class="mensagem">
-                <p>Oi, tudo bem? 😊</p>
-                <p>
-                  Eu sou o <b>Contato Inteligente Take Blip</b>. Adoro
-                  conversar!
-                </p>
-              </div>
-            </div>
-            <div class="mensagem-bot">
-              <div class="mensagem">
-                <p class="m-espaçamento">
-                  E então, sobre o que vamos conversar?
-                </p>
-                <div class="mensagem-list">
-                  <hr />
-                  <p><a href="#">WhatsApp e outros canais</a></p>
-                  <hr />
-                  <p><a href="#">Sobre Take Blip</a></p>
-                  <hr />
-                  <p><a href="#">Produtos e Serviços</a></p>
-                  <hr />
-                  <p><a href="#">Contratar Take Blip</a></p>
-                  <hr />
-                  <p><a href="#">Dúvidas e Suporte</a></p>
-                  <hr />
-                  <p class="m-espaçamento"><a href="#">Tudo em um Blip</a></p>
+            <div class="m-person-pai">
+              <div class="mensagem-person">
+                <div class="mensagem-p">
+                  <p>Oi</p>
                 </div>
               </div>
+              <div class="hora-person">
+                <p>19:08</p>
+              </div>
             </div>
-            <div class="hora-bot">
-              <p>19:09</p>
+            
+            <div class="pai-mensagem-bot">
+              <img src="Assents/Logo.png" alt="logo" />
+              <div class="all-mensagem-bot">
+                <div class="mensagem-bot">
+                  <div class="mensagem">
+                    <p>Oi, tudo bem? 😊</p>
+                    <p>
+                      Eu sou o <b>Contato Inteligente Take Blip</b>. Adoro
+                      conversar!
+                    </p>
+                  </div>
+                </div>
+                <div class="mensagem-bot">              
+                  <div class="mensagem">
+                    <p class="m-espacamento">
+                      E então, sobre o que vamos conversar?
+                    </p>
+                    <div class="mensagem-list">
+                      <hr />
+                      <p><a href="#">WhatsApp e outros canais</a></p>
+                      <hr />
+                      <p><a href="#">Sobre Take Blip</a></p>
+                      <hr />
+                      <p><a href="#">Produtos e Serviços</a></p>
+                      <hr />
+                      <p><a href="#">Contratar Take Blip</a></p>
+                      <hr />
+                      <p><a href="#">Dúvidas e Suporte</a></p>
+                      <hr />
+                      <p class="m-espaçamento"><a href="#">Tudo em um Blip</a></p>
+                    </div>                
+                  </div>
+                </div>
+                <div class="hora-bot">
+                  <p>19:09</p>
+                </div>
             </div>
-          </div>
+            </div>            
+          </div> 
+
           <div class="send-container">
             <input
               type="text"
