Modificando border-radius mensagem bot

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="mensagem-bot">              
+                <div class="mensagem-bot mensagem-bot2">              
                   <div class="mensagem">
                     <p class="m-espacamento">
                       E então, sobre o que vamos conversar?
