Ajustando cor do emoticon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="all-mensagem-bot">
                 <div class="mensagem-bot">
                   <div class="mensagem">
-                    <p>Oi, tudo bem? 😊</p>
+                    <p>Oi, tudo bem? <span>😊</span></p>
                     <p>
                       Eu sou o <b>Contato Inteligente Take Blip</b>. Adoro
                       conversar!
