--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="container-bubble">
-        <p class="x-close chat-fechado">X</p>
-        <img src="/Assents/balao.svg" alt="icone balão" class="bubble" />
+      <div class="container-bubble">        
+        <div id="bt-pai">
+            <p class="bt" id="bt-close">X</p>
+        </div>
+        <img src="/Assents/balao.svg" alt="icone balão" class="bt" id="bt-open" />
       </div>
 
       <div class="livechat">
