Ajustando altura do chat e formatação do código

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="container-bubble">        
+      <div class="container-bubble">
         <div id="bt-pai">
-            <p class="bt" id="bt-close">X</p>
+          <p class="bt" id="bt-close">X</p>
         </div>
-        <img src="/Assents/balao.svg" alt="icone balão" class="bt" id="bt-open" />
+        <img
+          src="/Assents/balao.svg"
+          alt="icone balão"
+          class="bt"
+          id="bt-open"
+        />
       </div>
 
       <div class="livechat">
@@ -39,7 +44,7 @@
                 <p>19:08</p>
               </div>
             </div>
-            
+
             <div class="pai-mensagem-bot">
               <img src="Assents/Logo.png" alt="logo" />
               <div class="all-mensagem-bot">
@@ -52,7 +57,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="mensagem-bot mensagem-bot2">              
+                <div class="mensagem-bot mensagem-bot2">
                   <div class="mensagem">
                     <p class="m-espacamento">
                       E então, sobre o que vamos conversar?
@@ -69,16 +74,18 @@
                       <hr />
                       <p><a href="#">Dúvidas e Suporte</a></p>
                       <hr />
-                      <p class="m-espaçamento"><a href="#">Tudo em um Blip</a></p>
-                    </div>                
+                      <p class="m-espaçamento">
+                        <a href="#">Tudo em um Blip</a>
+                      </p>
+                    </div>
                   </div>
                 </div>
                 <div class="hora-bot">
                   <p>19:09</p>
                 </div>
+              </div>
             </div>
-            </div>            
-          </div> 
+          </div>
 
           <div class="send-container">
             <input
